/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package org.dromara.hertzbeat.common.entity.message;

message Message
{
    // collector identity
    string identity = 1;
    // message type
    MessageType type = 2;
    // message content
    string msg = 3;
}

enum MessageType
{
    // heartbeat message
    HEARTBEAT = 0;
    // collector go online to master message
    GO_ONLINE = 1;
    // collector go offline to master message
    GO_OFFLINE = 2;
    // issue cyclic collect task 
    ISSUE_CYCLIC_TASK = 3;
    // delete cyclic collect task
    DELETE_CYCLIC_TASK = 4;
    // issue one-time collect task
    ISSUE_ONE_TIME_TASK = 5;
    // response one-time collect data
    RESPONSE_ONE_TIME_TASK_DATA = 6;
    // response cyclic collect data
    RESPONSE_CYCLIC_TASK_DATA = 7;
}
